src/test/ui/span/issue-24895-copy-clone-dropck.stderr
error[E0597]: `d1` does not live long enough
  --> $DIR/issue-24895-copy-clone-dropck.rs:27:15
   |
LL |     d2 = D(S(&d1, "inner"), "d2");
   |               ^^ borrowed value does not live long enough
LL | }
   | - `d1` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
